force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__AssetizationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetizationStatus__c</fullName>
    <label>Assetization Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetizationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>