force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__FulfillmentPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentPlanId__c</fullName>
    <label>Fulfillment Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>