force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__OrchestrationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrchestrationStatus__c</fullName>
    <label>Orchestration Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrchestrationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>