force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__rel_1720291850595_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291850595_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesTransactionFulfillmentRequest_F_rel</label>
    <referenceTo>ssot__FulfillmentPlan__dlm</referenceTo>
    <relationshipLabel>SalesTransactionFulfillmentRequest_F_rel</relationshipLabel>
    <relationshipName>rel_1720291850595_end</relationshipName>
    <type>Lookup</type>
</CustomField>