force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__rel_1720291852992_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291852992_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesTransactionFulfillmentRequest_S_rel</label>
    <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
    <relationshipLabel>SalesTransactionFulfillmentRequest_S_rel</relationshipLabel>
    <relationshipName>rel_1720291852992_end</relationshipName>
    <type>Lookup</type>
</CustomField>