force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__RoutingStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__RoutingStatus__c</fullName>
    <label>Routing Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RoutingStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>