force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__SalesTransactionReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesTransactionReferenceId__c</fullName>
    <label>Sales Transaction Reference Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesTransactionReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>