force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__SalesTransactionReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesTransactionReferenceObject__c</fullName>
    <label>Sales Transaction Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesTransactionReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>