force-app/main/default/objects/ssot__SalesTransactionFulfillmentRequest__dlm/fields/ssot__SalesTransactionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesTransactionType__c</fullName>
    <label>Sales Transaction Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesTransactionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>